# Live2DDesktop-CMake

./: .gitignore  CMakeLists.txt  README.md  config.json  常见问题.md
Main/: AppConfig.hpp  AppDelegate.cpp  AppDelegate.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Default.hpp  IAppConfig.hpp  IAppDelegate.hpp  config.json  main.cpp  test_main.cpp
Main/live2d/: CMakeLists.txt  CubismUserModelExtend.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  mainMinimum.cpp
Main/model/: CMakeLists.txt  IModelManager.hpp
Main/model/impl/: ModelManager.cpp  ModelManager.hpp
Main/model/model_dir/: CMakeLists.txt  ModelDirectory.cpp  ModelDirectory.hpp
Main/utils/: CMakeLists.txt  Log.cpp  Log.hpp
Main/utils/log/: Log.cpp  Log.hpp
Main/utils/matrix/: CMakeLists.txt  MatrixManager.cpp  MatrixManager.hpp
Main/utils/mouse/: CMakeLists.txt  MouseActionManager.cpp  MouseActionManager.hpp
Main/widgets/: CMakeLists.txt  IGLWin.hpp
Main/widgets/impl/: Scene.cpp  Scene.hpp
Main/widgets/scene/: Scene.cpp  Scene.hpp
Main/widgets/trayicon/: TrayIcon.cpp  TrayIcon.hpp
test/: CMakeLists.txt  Main_test.cpp  hello.cpp
test/config/: CMakeLists.txt  Config_test.cpp
test/log/: CMakeLists.txt  log_test.cpp
test/test/: CMakeLists.txt  test.cpp
test/utils/: log_test.cpp
utils/: example-config.json  launch.sh
