cmake_minimum_required(VERSION 3.13)

project(DesktopLive2d)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/static/${CMAKE_BUILD_TYPE})

# 全局变量
set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})

# add_subdirectory(Main)

add_subdirectory(test)